\name{mCSEAnews}
\title{mCSEA News}
\encoding{UTF-8}


\section{Version 0.99.0}{
  \itemize{
    \item mCSEA release.
  }
}